otel + slog
