# api/openapi.yaml
@@ -25,8 +25,11 @@ paths:
     post: 
       tags: 
         - secrets
-      summary: Create a scret 
+      summary: Create a secret 
       operationId: CreateSecret
+      
+      parameters: 
+        - $ref: "#/components/parameters/XRequestID"
       
       requestBody: 
         required: true
@@ -65,6 +68,7 @@ paths:
     
       parameters: 
         - $ref: "#/components/parameters/Namespace"
+        - $ref: "#/components/parameters/XRequestID"
       
       responses:
         "200":
@@ -100,6 +104,7 @@ paths:
       parameters: 
         - $ref: "#/components/parameters/Namespace"
         - $ref: "#/components/parameters/ResourceName"
+        - $ref: "#/components/parameters/XRequestID"
             
       responses:
         "200":
@@ -133,6 +138,7 @@ paths:
       parameters: 
         - $ref: "#/components/parameters/Namespace" 
         - $ref: "#/components/parameters/ResourceName"
+        - $ref: "#/components/parameters/XRequestID"
       
       requestBody: 
         required: true
@@ -174,6 +180,7 @@ paths:
       parameters: 
         - $ref: "#/components/parameters/Namespace" 
         - $ref: "#/components/parameters/ResourceName"
+        - $ref: "#/components/parameters/XRequestID"
         
       responses: 
         "200": 
@@ -201,6 +208,9 @@ paths:
       summary: Exchange Auth Data for JWT
       operationId: AuthUser
       description: Get JWT token for basic creds
+      
+      parameters: 
+        - $ref: "#/components/parameters/XRequestID" 
       
       requestBody:
         required: true
@@ -240,6 +250,14 @@ components:
       schema: 
         type: string
         example: staging
+
+    XRequestID:
+      name: X-Request-ID
+      in: header
+      required: false
+      schema:
+        type: string
+      description: Correlation ID for tracing
 
   securitySchemes:
     BearerAuth:
@@ -318,7 +336,8 @@ components:
           minimum: 8
         encoding:
           type: string
-          description: Encoding type 'base64', 'hex', 'alphanumeric'
+          enum: [symbols, digits, alphanumeric]
+          description: password type 
           default: alphanumeric
         data-keys:
           type: array
@@ -343,9 +362,7 @@ components:
         type:
           type: string
           description: Opaque if secret is set, AutoGenerated if the secret needs to be generated
-          enum: 
-            - Opaque
-            - AutoGenerated
+          enum: [Opaque, AutoGenerated]
         data:
           type: object
           description: Key-value data if Opaque else empty
